# dipl_ws

./: README.md
src/astro/: package.xml
src/astro/config/: client.yaml
src/astro/description/: realsense.xacro
src/astro/launch/: rsp.launch.py
src/astro/rviz/: view_robot.rviz
src/imu_transform/: package.xml  setup.cfg  setup.py
src/imu_transform/imu_transform/: imu_transform_node.py
src/nmpc_astro/: CMakeLists.txt  package.xml
src/nmpc_astro/config/: ekf.yaml  nmpc_settings.yaml
src/nmpc_astro/include/: nmcp.hpp  nmpc.hpp  nmpc_ros.hpp
src/nmpc_astro/launch/: ekf_node.launch.py  nmpc_rviz.launch.py  nmpc_standalone.launch.py  optitrack.launch.py
src/nmpc_astro/src/: main.cpp  nmcp.cpp  nmcp_navigation.cpp  nmpc.cpp  nmpc_ros.cpp
